--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Programming Foundations CA</title>
-    <link href='css/style.css' rel='stylesheet' />
-    <link rel='icon' href='data:;base64,=' />
-</head>
+    <link href="css/style.css" rel="stylesheet" />
+    <link rel="icon" href="data:;base64,=" />
+    <script defer src="js/smartphone.js"></script>
+  </head>
+  <body>
+    <main>
+      <div class="phone-container">
+        <div class="text-container">
+          <h1>My Smartphone</h1>
+          <p class="brand">Brand:</p>
+          <p class="model">Model:</p>
+          <p class="year">Year Released:</p>
+          <p class="isTouchScreen">Touch Screen:</p>
+          <p class="homeButton">Home Button:</p>
+          <p class="availableApps">Available Apps:</p>
+        </div>
+        <div>
+          <img class="image" src="images/Iphone.png" alt="" />
+        </div>
 
-<body>
+        <button class="callRandom">Call Random</button>
+        <button class="callSomeone">Call Someone</button>
+      </div>
 
-    <script src="js/script.js"></script>
-</body>
-
+      <div class="page-changes">
+        <button class="surprise-button">Press me for surprise</button>
+        <button class="change-phone">Change my Smartphone</button>
+      </div>
+    </main>
+  </body>
 </html>
