--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Programming Foundations CA</title>
     <link href="css/style.css" rel="stylesheet" />
-    <link rel="icon" href="data:;base64,=" />
+    <link rel="icon" href="#" />
     <script defer src="js/smartphone.js"></script>
   </head>
   <body>
